--- a/html-portfolio/sass/blocks/_header.scss
+++ b/html-portfolio/sass/blocks/_header.scss
@@ -23,22 +23,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1000;
-  top: -30px;
-  backdrop-filter: blur(9px);
+  // z-index: 1000;
+  // top: -30px;
+  // backdrop-filter: blur(9px);
   .container {
     /* Mobile XS */
     @media (max-width: 767px) {
       width: 100%;
       height: 100%;
-
     }
   }
   /* Tablet */
   @media (max-width: 1139px) {
-    position: unset;
-    z-index: unset;
-    top: unset;
+    // position: unset;
+    // z-index: unset;
+    // top: unset;
     backdrop-filter: unset;
   }
   /* Mobile XS */
