--- a/Pump/Main-page/main.css
+++ b/Pump/Main-page/main.css
@@ -6,6 +6,7 @@
     /* margin-top: 17px; */
   }
   .footer_contact__SF9bl h2 {
+    text-align: center;
     color: #fff;
     font-size: 18px;
     font-weight: 700;
