--- a/p-2/css/main.css
+++ b/p-2/css/main.css
@@ -315,6 +315,10 @@
   display: flex;
   gap: 45px;
 }
+.sub{
+  margin-left: 200px; 
+  padding-top: 10px;
+}
 
 @media (max-width: 799px) {
   .hidden-class {
@@ -325,5 +329,10 @@
   }
   .map {
     display: block;
+  }
+  .sub{
+    margin-left: 90px; 
+    padding-top: 10px;
+    width: 145px;
   }
 }
