--- a/Boots/main.css
+++ b/Boots/main.css
@@ -54,10 +54,14 @@ body {
 .form {
     display: none;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 30px;
 }
 
 .input {
-    width: 90px;
+    width: 100%;
     outline: none;
     margin: 10px 5%;
     padding: 15px 10px;
