--- a/Header/index.css
+++ b/Header/index.css
@@ -206,7 +206,7 @@
 
 .dropdown-menu {
     position: absolute;
-    top: 40px;
+    top: 45px;
     left: 0 !important;
 }
 
@@ -375,10 +375,15 @@
 .tabcontent.active {
     width: 100%;
     height: 100%;
+    padding: 0;
 
     & p {
-        padding: 0px 15px;
+        padding: 15px;
     }
+}
+
+.links-mob {
+    background-color: #fff;
 }
 
 .tab.tab-mob {
