--- a/Header/reset.css
+++ b/Header/reset.css
@@ -10992,6 +10992,7 @@ svg.chm-add-spinner {
 	background: #fff;
 	position: relative;
 	min-height: 54px;
+	height: 54px;
 	padding: 15px 54px 15px 10px;
 	border-radius: 0px;
 	display: flex;
@@ -11018,6 +11019,13 @@ svg.chm-add-spinner {
 	color:#000;
 	font-weight: 600;
 	padding-left: 10px;
+
+	@media screen and (max-width: 599px) {
+		width: 240px;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+	}
 }
 
 .mobm-header-block {
