--- a/Header/index.css
+++ b/Header/index.css
@@ -4,18 +4,18 @@
 
 .header-main {
     padding: 15px 0px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
 
     @media screen and (max-width: 900px) {
         padding: 10px;
         justify-content: space-between;
         box-shadow: 0px 8px 16px -8px rgba(0, 0, 0, 0.06);
     }
+}
+
+.header-container-main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .pull-right {
@@ -184,7 +184,7 @@
     margin-left: 20px;
 
     @media screen and (max-width: 900px) {
-        margin-left: 50px;
+        /* margin-left: 50px; */
     }
 }
 
