--- a/Header/index.css
+++ b/Header/index.css
@@ -6,9 +6,15 @@
     padding: 15px 0px;
 
     @media screen and (max-width: 900px) {
-        padding: 10px;
+        padding: 5px 0px;
         justify-content: space-between;
         box-shadow: 0px 8px 16px -8px rgba(0, 0, 0, 0.06);
+    }
+}
+
+.header-logo-svg {
+    @media screen and (max-width: 400px) {
+        width: 140px;
     }
 }
 
@@ -59,6 +65,10 @@
 
     @media screen and (max-width: 900px) {
         margin-right: 0px
+    }
+
+    @media screen and (max-width: 400px) {
+        width: 140px;
     }
 }
 
@@ -183,8 +193,9 @@
     align-items: center;
     margin-left: 20px;
 
-    @media screen and (max-width: 900px) {
-        /* margin-left: 50px; */
+    @media screen and (max-width: 400px) {
+        margin-left: 10px;
+        font-size: 10px !important;
     }
 }
 
