remove nav in Header

--- a/Header/index.css
+++ b/Header/index.css
@@ -2,6 +2,10 @@
     display: flex;
     justify-content: space-between;
     padding: 15px 0px;
+
+    @media screen and (max-width: 400px) {
+        display: none;
+    }
 }
 
 .header-top-left {
