Update mobile nav & footer

--- a/Header/index.css
+++ b/Header/index.css
@@ -74,6 +74,10 @@
 
 .pull-right {
     display: flex;
+
+    @media screen and (max-width: 400px) {
+        display: none;
+    }
 }
 
 .parent-link {
@@ -124,7 +128,9 @@
     display: flex;
 
     @media screen and (max-width: 900px) {
+        justify-content: space-between;
         flex-direction: row-reverse;
+        width: 100%;
     }
 }
 
@@ -156,11 +162,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
     border-radius: 8px;
     background-color: #26B663;
-    margin-right: 20px;
     cursor: pointer;
 }
 
@@ -177,6 +182,16 @@
 
     @media screen and (max-width: 900px) {
         display: none;
+    }
+}
+
+.mobile-search {
+    display: none;
+
+    @media screen and (max-width: 400px) {
+        display: flex;
+        height: 45px !important;
+        align-items: center !important;
     }
 }
 
@@ -557,4 +572,24 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+}
+
+.mobile-footer {
+    display: none;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px -2px 2px;
+    padding: 15px 0px 13px;
+
+    @media screen and (max-width: 400px) {
+        display: flex;
+    }
+}
+
+.mob-footer-title {
+    font-size: 10px;
 }
